solve overflowing output issue

--- a/src/components/converters/converters.css
+++ b/src/components/converters/converters.css
@@ -37,6 +37,7 @@
 
 .output-section{
     gap: 17px;
+   
 }
 
 .textarea{
@@ -57,7 +58,9 @@
     border: 2px solid white;
     width: 500px;
     height: 450px;
-    color: black
+    color: red;
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 
